# OctoPrint-LogMonitor

./: .codacy.yml  .flake8  .gitignore  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  Taskfile.yml  codecov.yml  eslint.config.mjs  mkdocs.yml  package-lock.json  pyproject.toml  pytest.ini
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/instructions/: logmonitor-plugin.instructions.md
.github/workflows/: bandit-sarif.yml  ci.yml  codeql.yml  docs.yml  i18n.yml  lint.yml  release.yml  vibe-coded.yml
.ideas/: plugin-implementation-plan.md
docs/: authors.md  changelog.md  contributing.md  index.md  overview.md  security.md
docs/api/: python.md
extras/: README.txt  logmonitor.md
extras/github/: bug_report.yml  feature_request.yml
octoprint_logmonitor/: __init__.py  _version.py  log_searcher.py  log_tailer.py  security.py
octoprint_logmonitor/static/css/: logmonitor.css
octoprint_logmonitor/static/js/: logmonitor.js
octoprint_logmonitor/templates/: logmonitor_navbar.jinja2  logmonitor_settings.jinja2  logmonitor_sidebar.jinja2  logmonitor_tab.jinja2
octoprint_logmonitor/translations/de/LC_MESSAGES/: messages.mo
tests/: __init__.py  conftest.py  test_integration_api.py  test_log_searcher.py  test_log_tailer.py  test_plugin_core.py  test_security.py
translations/: README.txt  messages.pot
translations/de/LC_MESSAGES/: messages.po
