[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "OctoPrint-LogMonitor"
version = "0.2.0"
description = "Live log streaming and searching for OctoPrint with severity alerting"
license = "AGPL-3.0-or-later"
authors = [
    {name = "Ajimaru", email = "your.email@example.com"}
]
readme = {file = "README.md", content-type = "text/markdown"}

requires-python = ">=3.9, <4"

# any additional requirements (besides OctoPrint) should be listed here
dependencies = []

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = [
    "octoprint_logmonitor",
    "octoprint_logmonitor.*"
]

[project.entry-points."octoprint.plugin"]
logmonitor = "octoprint_logmonitor"

[project.urls]
Homepage = "https://github.com/Ajimaru/OctoPrint-LogMonitor"

[project.optional-dependencies]
develop = [
    "build",
    "pytest",
    "pytest-cov",
    "go-task-bin"
]
